broken link fixed, photo in index changed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <a href="index.html">Home</a>
         <a href="recipes/apple_cobbler.html">Apple Cobbler</a>
         <a href="recipes/macaroni_salad.html">Macaroni Salad</a>
-        <a href="chicken_soup.html">Chicken Noodle Soup</a>
+        <a href="recipes/chicken_soup.html">Chicken Noodle Soup</a>
     </p>
-        <img src="img/fruit.jpg" alt="Hanging Fruit">  
+        <p>Welcome! Please remove your shoes. Let me grab your coat. Tis' a day to feast!</p>
+        <img src="https://i.pinimg.com/564x/6e/7f/cb/6e7fcbe1d3c9c272a0495f060dd1da54.jpg" alt="dirty kitchen">  
+        <!--Photo is not owned by me, it is taken from the link above for the sake of practicing HTML-->
 </body>
 </html>
